--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "autoprefixer": "10.4.15",
     "clsx": "^2.0.0",
     "eslint": "8.49.0",
